Updating utility classes to use Long instead of Integer